<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab2B</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonplus">+</string>
    <string name="buttonminus">-</string>
    <string name="buttonmult">*</string>
    <string name="buttonequals">=</string>
    <string name="buttondivide">/</string>
    <string name="reset">C</string>
    <string name="dot">.</string>
</resources>
